--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -57,10 +57,12 @@
 }
 
 .code {
+  white-space: pre;
   background: #fafafa;
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
+  line-height: 1.1rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
